--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@ html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body,ul,p,div,ol,h1
 <div class="container">
 <div class="center">
 <div class="shadow"></div>
-<div class="avatar"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTijY100e9JLJKTO4Y0CtOp4uTmxOkpWSsgZQlwPD213-dAfYbKdT_L_pchSXxQKn5IQbs&usqp=CAU" alt="" title="" style="">
+<div class="avatar"><img src="https://cdn.glitch.global/a0dfe029-c7ba-4fea-a4f1-967ebc02ca1e/f41192f0-2fad-4415-af41-8d04dfbe3fa4.image.png?v=1684145881163" alt="" title="" style="">
 </div>
 <div class="text">
 <h3>Tap Tip </h3>
@@ -35,11 +35,11 @@ html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body,ul,p,div,ol,h1
  </div>
  <div class="item ">
   <span style="background-image: url('https://cdn.glitch.global/a5da2f18-878d-4722-b1ad-5ae2f04638f8/1675885d-9733-45dd-aa27-8ce443c078f4.image.png?v=1681972907415')"></span>
-   <a href="https://web1s.info/pqJCVspUH0"  class="btn link"> Ếch xanh ( bullfrog Assistant ) </a>
+   <a href="https://link2m.com/kJLnSR"  class="btn link"> Ếch xanh ( bullfrog Assistant ) </a>
  </div>
  <div class="item ">
   <span style="background-image: url('https://cdn.glitch.global/a5da2f18-878d-4722-b1ad-5ae2f04638f8/7d4fd9ed-fe20-4f6f-bf35-6f31dfb9bb83.image.png?v=1681971175550')"></span>
-   <a href="https://web1s.info/6E7aAMK8hl"  class="btn link"> TrollStore </a>
+   <a href="https://link2m.com/kJLnSR"  class="btn link"> TrollStore </a>
  </div>
  <div class="item ">
   <span style="background-image: url('https://cdn.glitch.global/a5da2f18-878d-4722-b1ad-5ae2f04638f8/e77350c0-9b26-48c7-bd6b-780185f20bb5.image.png?v=1681973050780')"></span>
@@ -47,7 +47,7 @@ html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body,ul,p,div,ol,h1
  </div>
  <div class="item ">
   <span style="background-image: url('https://cdn.glitch.global/a5da2f18-878d-4722-b1ad-5ae2f04638f8/5424cd0d-538d-4ace-b841-bc9f49700238.image.png?v=1681973107563')"></span>
-   <a href="https://web1s.info/TsqUk4ihsJ"  class="btn link"> Gbox vip </a>
+   <a href="https://link2m.com/7Lg0RAUy"  class="btn link"> Gbox vip </a>
  </div>
  <div class="item ">
   <span style="background-image: url('https://cdn.glitch.global/a5da2f18-878d-4722-b1ad-5ae2f04638f8/7c360560-3375-42d1-b31b-5b26baaec756.image.png?v=1681980803701')"></span>
